--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
+    "ml-random-forest": "^2.1.0",
     "ml-regression": "^5.0.0",
     "ml-stat": "^1.3.3",
     "morgan": "^1.10.0",
