--- a/server/package.json
+++ b/server/package.json
@@ -20,11 +20,13 @@
     "csv-parser": "^3.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "ml-random-forest": "^2.1.0",
     "ml-regression": "^5.0.0",
     "ml-stat": "^1.3.3",
+    "mongoose": "^8.3.1",
     "morgan": "^1.10.0",
     "xlsx": "^0.18.5"
   },
