--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "csv-parser": "^3.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
