--- a/server/package.json
+++ b/server/package.json
@@ -15,14 +15,18 @@
     "@tensorflow/tfjs": "^4.17.0",
     "@tensorflow/tfjs-node": "^4.17.0",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.3",
+    "graphql-date": "^1.0.3",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "ml-random-forest": "^2.1.0",
     "ml-regression": "^5.0.0",
