--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -14,6 +14,7 @@
     "@auth-kit/react-router": "^3.1.3",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.3",
+    "google-map-react": "^2.2.1",
     "react": "^18.2.0",
     "react-auth-kit": "^3.1.3",
     "react-bootstrap": "^2.10.2",
