--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -14,11 +14,13 @@
     "@auth-kit/react-router": "^3.1.3",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.3",
+    "exceljs": "^4.4.0",
     "google-map-react": "^2.2.1",
     "react": "^18.2.0",
     "react-auth-kit": "^3.1.3",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-export-table-to-excel": "^1.0.6",
     "react-router-dom": "^6.12.1"
   },
   "devDependencies": {
