--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -19,8 +19,8 @@
     "react": "^18.2.0",
     "react-auth-kit": "^3.1.3",
     "react-bootstrap": "^2.10.2",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
-    "react-export-table-to-excel": "^1.0.6",
     "react-router-dom": "^6.12.1"
   },
   "devDependencies": {
